* Set proper version requirements for TYPO3 and PHP in ext_emconf.php * Raised version to 0.3.0
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/kb_conttable/trunk@27100 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,7 @@
 2009-11-28  Bernhard Kraft <kraftb@think-open.at>
 
+	* Set proper version requirements for TYPO3 and PHP in ext_emconf.php
+	* Raised version to 0.3.0
 	* Updated documentation
 	* Initial import into forge SVN
 	* Raised TER state from "alpha" to "stable"
