* Fixed a bug: Commented out not fully implemented feature "DB mode"
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/kb_conttable/trunk@27141 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+2009-11-30  Bernhard Kraft <kraftb@think-open.at>
+
+	* Fixed a bug: Commented out not fully implemented feature "DB mode"
+
 2009-11-28  Bernhard Kraft <kraftb@think-open.at>
 
 	* Set proper version requirements for TYPO3 and PHP in ext_emconf.php
