* Updated documentation: Added information about sponsor
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/kb_conttable/trunk@27155 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,6 @@
 2009-11-30  Bernhard Kraft <kraftb@think-open.at>
 
+	* Updated documentation: Added information about sponsor
 	* Fixed a bug: Commented out not fully implemented feature "DB mode"
 
 2009-11-28  Bernhard Kraft <kraftb@think-open.at>
