* Removed debug statements
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/kb_conttable/trunk@27248 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+2009-12-01  Bernhard Kraft <kraftb@think-open.at>
+
+	* Removed debug statements
+
 2009-11-30  Bernhard Kraft <kraftb@think-open.at>
 
 	* Updated documentation: Added information about sponsor
