* Removed a debug statement
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/kb_conttable/trunk@28013 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+2009-12-24  Bernhard Kraft <kraftb@think-open.at>
+
+	* Removed a debug statement
+
 2009-12-09  Bernhard Kraft <kraftb@think-open.at>
 
 	* Updated all PHP doc references for methods at beginning of files using extdeveval
