* Uploaded new version 0.4.0 to TER
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/kb_conttable/trunk@32965 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+2010-05-05  Bernhard Kraft <kraftb@think-open.at>
+	
+	* Uploaded new version 0.4.0 to TER
+
 2009-12-26  Bernhard Kraft <kraftb@think-open.at>
 
 	* Removed a patch for adding a hook (this was only required in TYPO3 < 3.8.0)
